# seekr

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
seekr/: __init__.py  config.py
seekr/application/: __init__.py  index_service.py  search_service.py  watcher_service.py
seekr/cli/: main.py
seekr/config/: __init__.py  settings.py
seekr/domain/: __init__.py  entities.py  exceptions.py  interfaces.py  patterns.py
seekr/infrastructure/: __init__.py  clip_embedder.py  container.py  daemon.py  faiss_store.py  ignore.py  parsers.py  sqlite_store.py  text_embedder.py  watcher.py
seekr/infrastructure/queue/: __init__.py  index_queue.py
seekr/infrastructure/workers/: __init__.py  index_worker.py
seekr/utils/: __init__.py  logging.py
tests/: __init__.py  test_chunking.py  test_error_handling.py  test_index_service.py  test_parsers.py  test_queue.py
